changing folder structure

--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -5,8 +5,8 @@ $border-radius: 8px;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  background-color: #f4f4f4;
+  // height: 100vh;
+  // background-color: #f4f4f4;
 }
 
 .register-card {
