--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -5,6 +5,7 @@ $border-radius: 8px;
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 1rem;
 //   height: 100vh;
 //   background-color: #f4f4f4;
 }
