--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -1,7 +1,7 @@
 .dashboard {
   display: flex;
-  height: 100vh;
-  background: #f4f4f4;
+  // height: 100vh;
+  // background: #f4f4f4;
 
   .sidebar {
     width: 250px;
