--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -109,4 +109,10 @@ $border-radius: 8px;
       }
     }
   }
+  .login-svg {
+    width: 300px;
+    height: auto;
+    margin-bottom: 1rem;
+  }
+  
 }
